# libsick_ldmrs

./: CMakeLists.txt  Readme.txt  SickLDMRSConfig.cmake.in  package.xml
build-release-manual/: makefile
src/: BasicDatatypes.hpp  CMakeLists.txt  main.cpp  manager.cpp  manager.hpp
src/application/: LdmrsSectorChangeApp.cpp
src/datatypes/: Box2D.cpp  Object.cpp  Polygon2D.cpp  ScannerInfo.cpp  ScannerInfo.hpp
src/devices/: LD_MRS.cpp  LD_MRS.hpp  LuxBase.cpp  LuxBase.hpp
src/interfaces/: tcp.cpp
src/sopas/: LdmrsSopasLayer.cpp  LdmrsSopasLayer.hpp  SopasBase.cpp  SopasBase.hpp
src/tools/: MathToolbox.cpp  MathToolbox.hpp  SickThread.hpp  errorhandler.cpp  toolbox.cpp  toolbox.hpp
